Revert Java version to 9.